syntax = "proto3";

package user;

option go_package = "ChatServer/apps/user/pb";

// ============================================================================
// 用户服务 (User Service)
// ============================================================================
// 职责：
//   1. 用户认证管理（登录、注册、验证码、Token刷新、登出）
//   2. 用户信息管理（查询、更新、头像、密码）
//   3. 好友关系管理（搜索、申请、同意/拒绝、删除、拉黑、备注）
//   4. 设备会话管理（登录态、多设备、在线状态）
//   5. 用户查询服务（批量查询用于好友列表、群成员列表等）
//
// 数据依赖：
//   - MySQL: user_info, user_relation, apply_request, device_session
//   - Redis: 验证码、登录态缓存、用户信息缓存、好友关系缓存
// ============================================================================

service UserService {
    // ==================== 用户认证相关 ====================
    
    // Login 用户登录
    // 业务场景：用户通过手机号和密码登录系统
    // 请求：手机号(11位)、密码(加密后)、设备信息
    // 响应：用户信息(用于生成JWT)、错误码(如密码错误、账号禁用等)
    // 注意：Token生成由Gateway负责，User只负责验证并返回用户信息
    rpc Login (LoginRequest) returns (LoginResponse) {}
    
    // Register 用户注册
    // 业务场景：新用户通过手机号注册账号
    // 请求：手机号、密码、验证码、昵称(可选)、设备信息
    // 响应：新创建的用户UUID、手机号、昵称
    // 错误：手机号已存在、验证码错误/过期、手机号格式错误
    rpc Register (RegisterRequest) returns (RegisterResponse) {}
    
    // SendSmsCode 发送短信验证码
    // 业务场景：注册、登录、找回密码时发送验证码
    // 请求：手机号、验证码类型(1:注册 2:登录 3:找回密码)
    // 响应：成功/失败
    // 限制：同一手机号60秒内只能发送一次
    rpc SendSmsCode (SendSmsCodeRequest) returns (SendSmsCodeResponse) {}
    
    // ValidateSmsCode 验证验证码
    // 业务场景：验证用户输入的验证码是否正确
    // 请求：手机号、验证码、验证码类型
    // 响应：验证结果(true/false)
    rpc ValidateSmsCode (ValidateSmsCodeRequest) returns (ValidateSmsCodeResponse) {}
    
    // RefreshToken 刷新Token
    // 业务场景：Access Token过期时，使用Refresh Token获取新的用户信息
    // 请求：Refresh Token
    // 响应：用户信息(用于生成新的Access Token)
    // 注意：Gateway验证Refresh Token合法性后，调用此接口获取最新用户信息
    rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse) {}
    
    // Logout 用户登出
    // 业务场景：用户主动退出登录
    // 请求：用户UUID、设备ID
    // 响应：成功/失败
    // 操作：删除设备的登录态、更新在线状态
    rpc Logout (LogoutRequest) returns (LogoutResponse) {}
    
    // ==================== 用户信息管理 ====================
    
    // GetUserInfo 获取用户信息
    // 业务场景：查询用户的详细信息
    // 请求：用户UUID 或 手机号(二选一)
    // 响应：用户完整信息
    // 注意：手机号查询时，返回的信息可能需要脱敏（如手机号、邮箱）
    rpc GetUserInfo (GetUserInfoRequest) returns (GetUserInfoResponse) {}
    
    // UpdateUserInfo 更新用户信息
    // 业务场景：用户修改昵称、签名、生日、性别等基本信息
    // 请求：用户UUID、要更新的字段
    // 响应：更新后的用户信息
    // 注意：手机号、邮箱等敏感字段需要单独接口验证
    rpc UpdateUserInfo (UpdateUserInfoRequest) returns (UpdateUserInfoResponse) {}
    
    // UpdateAvatar 更新用户头像
    // 业务场景：用户上传/更换头像
    // 请求：用户UUID、头像URL
    // 响应：更新后的头像URL
    rpc UpdateAvatar (UpdateAvatarRequest) returns (UpdateAvatarResponse) {}
    
    // ChangePassword 修改密码
    // 业务场景：用户修改密码
    // 请求：用户UUID、旧密码、新密码
    // 响应：成功/失败
    // 错误：旧密码错误
    // 注意：修改密码后，需要清除该用户所有设备的登录态
    rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse) {}
    
    // BindEmail 绑定/修改邮箱
    // 业务场景：用户绑定或修改邮箱
    // 请求：用户UUID、邮箱、验证码
    // 响应：成功/失败
    // 注意：需要验证码验证
    rpc BindEmail (BindEmailRequest) returns (BindEmailResponse) {}
    
    // ==================== 好友关系管理 ====================
    
    // SearchUser 搜索用户
    // 业务场景：通过手机号或昵称搜索用户（用于添加好友）
    // 请求：搜索关键字(手机号或昵称)、当前用户UUID(用于过滤自己、已拉黑用户)
    // 响应：匹配的用户列表(脱敏手机号)
    rpc SearchUser (SearchUserRequest) returns (SearchUserResponse) {}
    
    // SendFriendRequest 发送好友申请
    // 业务场景：A用户申请添加B为好友
    // 请求：申请人UUID、目标用户UUID、申请理由
    // 响应：成功/失败
    // 错误：已经是好友、好友申请已发送、对方已拉黑你、自己已拉黑对方
    rpc SendFriendRequest (SendFriendRequestRequest) returns (SendFriendRequestResponse) {}
    
    // HandleFriendRequest 处理好友申请
    // 业务场景：用户同意或拒绝好友申请
    // 请求：申请ID(apply_request.id)、处理人UUID、操作(1:同意 2:拒绝)、处理备注
    // 响应：成功/失败
    // 注意：同意时需要创建双向的好友关系(user_relation表)
    rpc HandleFriendRequest (HandleFriendRequestRequest) returns (HandleFriendRequestResponse) {}
    
    // GetFriendRequests 获取好友申请列表
    // 业务场景：查看待处理的好友申请
    // 请求：用户UUID、分页参数
    // 响应：好友申请列表、分页信息
    rpc GetFriendRequests (GetFriendRequestsRequest) returns (GetFriendRequestsResponse) {}
    
    // GetFriendList 获取好友列表
    // 业务场景：查看所有好友及其信息
    // 请求：用户UUID、分页参数
    // 响应：好友列表、每个好友的备注、在线状态等
    // 注意：需要批量查询用户信息(用户服务内部调用BatchGetUsers)
    rpc GetFriendList (GetFriendListRequest) returns (GetFriendListResponse) {}
    
    // DeleteFriend 删除好友
    // 业务场景：删除某个好友关系
    // 请求：当前用户UUID、目标用户UUID
    // 响应：成功/失败
    // 注意：单向删除，即user_relation.status=2(已删除)，不删除对方记录
    rpc DeleteFriend (DeleteFriendRequest) returns (DeleteFriendResponse) {}
    
    // SetFriendRemark 设置好友备注
    // 业务场景：为好友设置备注名
    // 请求：当前用户UUID、目标用户UUID、备注名
    // 响应：成功/失败
    rpc SetFriendRemark (SetFriendRemarkRequest) returns (SetFriendRemarkResponse) {}
    
    // BlockUser 拉黑用户
    // 业务场景：将用户加入黑名单
    // 请求：当前用户UUID、目标用户UUID
    // 响应：成功/失败
    // 注意：拉黑会自动删除好友关系(user_relation.status=1)
    rpc BlockUser (BlockUserRequest) returns (BlockUserResponse) {}
    
    // UnblockUser 解除拉黑
    // 业务场景：将用户从黑名单移除
    // 请求：当前用户UUID、目标用户UUID
    // 响应：成功/失败
    rpc UnblockUser (UnblockUserRequest) returns (UnblockUserResponse) {}
    
    // GetBlacklist 获取黑名单
    // 业务场景：查看黑名单列表
    // 请求：用户UUID、分页参数
    // 响应：黑名单用户列表
    rpc GetBlacklist (GetBlacklistRequest) returns (GetBlacklistResponse) {}
    
    // ==================== 设备会话管理 ====================
    
    // CreateDeviceSession 创建设备会话
    // 业务场景：用户登录后，记录设备信息（Gateway调用）
    // 请求：用户UUID、设备ID、设备信息、IP、User-Agent
    // 响应：成功/失败
    // 注意：同一个用户+设备ID只保留最新会话
    rpc CreateDeviceSession (CreateDeviceSessionRequest) returns (CreateDeviceSessionResponse) {}
    
    // GetDeviceSessions 获取用户的设备列表
    // 业务场景：查看用户在哪些设备上登录过
    // 请求：用户UUID
    // 响应：设备列表(设备名、平台、最后登录时间、在线状态等)
    rpc GetDeviceSessions (GetDeviceSessionsRequest) returns (GetDeviceSessionsResponse) {}
    
    // UpdateDeviceOnlineState 更新设备在线状态
    // 业务场景：心跳上报或连接断开时更新在线状态（Connect服务调用）
    // 请求：用户UUID、设备ID、在线状态(0:在线 1:下线)
    // 响应：成功/失败
    rpc UpdateDeviceOnlineState (UpdateDeviceOnlineStateRequest) returns (UpdateDeviceOnlineStateResponse) {}
    
    // KickDevice 踢出设备
    // 业务场景：在当前设备强制下线其他设备
    // 请求：操作人UUID、目标设备ID
    // 响应：成功/失败
    // 注意：需要权限验证(只能踢自己的设备)
    rpc KickDevice (KickDeviceRequest) returns (KickDeviceResponse) {}
    
    // ==================== 批量用户查询（内部服务调用）====================
    
    // BatchGetUsers 批量获取用户信息
    // 业务场景：Message服务查询消息发送者信息、Group服务查询群成员信息
    // 请求：用户UUID列表
    // 响应：用户信息映射(UUID -> UserInfo)
    // 注意：用于批量查询减少数据库压力
    rpc BatchGetUsers (BatchGetUsersRequest) returns (BatchGetUsersResponse) {}
    
    // GetUsersOnlineState 批量获取用户在线状态
    // 业务场景：Gateway显示好友在线状态、Connect服务推送消息前查询
    // 请求：用户UUID列表
    // 响应：用户在线状态映射(UUID -> OnlineState)
    rpc GetUsersOnlineState (GetUsersOnlineStateRequest) returns (GetUsersOnlineStateResponse) {}
}

// ============================================================================
// 消息定义 (Messages)
// ============================================================================

// ==================== 公共消息结构 ====================

// DeviceInfo 设备信息
message DeviceInfo {
    string device_id = 1;      // 设备唯一标识
    string platform = 2;       // 平台(iOS/Android/Web/PC)
    string os_version = 3;     // 操作系统版本
    string app_version = 4;    // 应用版本
    string device_model = 5;   // 设备型号
    string device_name = 6;    // 设备名称
}

// Pagination 分页参数
message Pagination {
    int32 page = 1;            // 页码，从1开始
    int32 page_size = 2;       // 每页数量，默认20
}

// PaginationResponse 分页响应
message PaginationResponse {
    int32 page = 1;            // 当前页码
    int32 page_size = 2;       // 每页数量
    int64 total = 3;           // 总记录数
    int32 total_pages = 4;     // 总页数
}

// UserInfo 用户基础信息
message UserInfo {
    string uuid = 1;          // 用户UUID
    string nickname = 2;      // 昵称
    string telephone = 3;     // 手机号
    string email = 4;         // 邮箱
    string avatar = 5;        // 头像URL
    int32 gender = 6;         // 性别(0:男 1:女 2:未知)
    string signature = 7;     // 个性签名
    string birthday = 8;      // 生日(YYYY-MM-DD)
    int32 status = 9;         // 状态(0:正常 1:禁用)
    int64 created_at = 10;    // 注册时间(Unix毫秒时间戳)
    int64 updated_at = 11;    // 更新时间
}

// CommonResponse 通用响应
message CommonResponse {
    int32 code = 1;           // 状态码(0:成功 非0:失败)
    string message = 2;      // 响应消息
}

// ==================== 用户认证相关消息 ====================

// LoginRequest 登录请求
message LoginRequest {
    string telephone = 1;    // 手机号(11位)
    string password = 2;     // 密码(加密后)
    DeviceInfo device_info = 3; // 设备信息
}

// LoginResponse 登录响应
message LoginResponse {
    int32 code = 1;           // 状态码(0:成功 11001:用户不存在 11003:密码错误 11004:用户被禁用)
    string message = 2;       // 响应消息
    UserInfo user_info = 3;   // 用户信息(成功时返回)
}

// RegisterRequest 注册请求
message RegisterRequest {
    string telephone = 1;    // 手机号(11位)
    string password = 2;     // 密码(加密后)
    string verify_code = 3;  // 验证码
    string nickname = 4;    // 昵称(可选)
    DeviceInfo device_info = 5; // 设备信息
}

// RegisterResponse 注册响应
message RegisterResponse {
    int32 code = 1;           // 状态码(0:成功 11002:用户已存在 11005:手机号格式错误 11006:验证码错误 11007:验证码过期)
    string message = 2;       // 响应消息
    string user_uuid = 3;     // 新用户的UUID
    string telephone = 4;     // 手机号
    string nickname = 5;      // 昵称
}

// SendSmsCodeRequest 发送验证码请求
message SendSmsCodeRequest {
    string telephone = 1;    // 手机号(11位)
    int32 code_type = 2;     // 验证码类型(1:注册 2:登录 3:找回密码)
}

// SendSmsCodeResponse 发送验证码响应
message SendSmsCodeResponse {
    int32 code = 1;           // 状态码(0:成功 11005:手机号格式错误 10005:发送过于频繁)
    string message = 2;       // 响应消息
}

// ValidateSmsCodeRequest 验证码验证请求
message ValidateSmsCodeRequest {
    string telephone = 1;    // 手机号
    string verify_code = 2;  // 验证码
    int32 code_type = 3;     // 验证码类型
}

// ValidateSmsCodeResponse 验证码验证响应
message ValidateSmsCodeResponse {
    int32 code = 1;           // 状态码(0:成功 11006:验证码错误 11007:验证码过期)
    string message = 2;       // 响应消息
    bool is_valid = 3;        // 是否有效
}

// RefreshTokenRequest 刷新Token请求
message RefreshTokenRequest {
    string user_uuid = 1;     // 用户UUID(从Refresh Token中解析)
    string device_id = 2;     // 设备ID
}

// RefreshTokenResponse 刷新Token响应
message RefreshTokenResponse {
    int32 code = 1;           // 状态码(0:成功 11001:用户不存在 11004:用户被禁用)
    string message = 2;       // 响应消息
    UserInfo user_info = 3;   // 用户信息(用于生成新的Access Token)
}

// LogoutRequest 登出请求
message LogoutRequest {
    string user_uuid = 1;     // 用户UUID
    string device_id = 2;     // 设备ID
}

// LogoutResponse 登出响应
message LogoutResponse {
    int32 code = 1;           // 状态码(0:成功)
    string message = 2;       // 响应消息
}

// ==================== 用户信息管理消息 ====================

// GetUserInfoRequest 获取用户信息请求
message GetUserInfoRequest {
    string user_uuid = 1;     // 用户UUID(优先)
    string telephone = 2;     // 手机号(user_uuid为空时使用)
}

// GetUserInfoResponse 获取用户信息响应
message GetUserInfoResponse {
    int32 code = 1;           // 状态码(0:成功 11001:用户不存在)
    string message = 2;       // 响应消息
    UserInfo user_info = 3;   // 用户信息
}

// UpdateUserInfoRequest 更新用户信息请求
message UpdateUserInfoRequest {
    string user_uuid = 1;     // 用户UUID
    string nickname = 2;      // 昵称(可选)
    string signature = 3;     // 个性签名(可选)
    string birthday = 4;      // 生日(YYYY-MM-DD,可选)
    int32 gender = 5;         // 性别(0:男 1:女 2:未知,可选)
}

// UpdateUserInfoResponse 更新用户信息响应
message UpdateUserInfoResponse {
    int32 code = 1;           // 状态码(0:成功 11001:用户不存在)
    string message = 2;       // 响应消息
    UserInfo user_info = 3;   // 更新后的用户信息
}

// UpdateAvatarRequest 更新头像请求
message UpdateAvatarRequest {
    string user_uuid = 1;     // 用户UUID
    string avatar_url = 2;    // 头像URL
}

// UpdateAvatarResponse 更新头像响应
message UpdateAvatarResponse {
    int32 code = 1;           // 状态码(0:成功 11001:用户不存在)
    string message = 2;       // 响应消息
    string avatar_url = 3;    // 更新后的头像URL
}

// ChangePasswordRequest 修改密码请求
message ChangePasswordRequest {
    string user_uuid = 1;     // 用户UUID
    string old_password = 2;  // 旧密码(加密后)
    string new_password = 3;  // 新密码(加密后)
}

// ChangePasswordResponse 修改密码响应
message ChangePasswordResponse {
    int32 code = 1;           // 状态码(0:成功 11001:用户不存在 11003:旧密码错误)
    string message = 2;       // 响应消息
}

// BindEmailRequest 绑定邮箱请求
message BindEmailRequest {
    string user_uuid = 1;     // 用户UUID
    string email = 2;         // 邮箱
    string verify_code = 3;  // 验证码
}

// BindEmailResponse 绑定邮箱响应
message BindEmailResponse {
    int32 code = 1;           // 状态码(0:成功 11001:用户不存在 11006:验证码错误)
    string message = 2;       // 响应消息
}

// ==================== 好友关系管理消息 ====================

// SearchUserRequest 搜索用户请求
message SearchUserRequest {
    string keyword = 1;       // 搜索关键字(手机号或昵称)
    string current_uuid = 2;  // 当前用户UUID(用于过滤)
    Pagination pagination = 3; // 分页参数
}

// SearchUserResponse 搜索用户响应
message SearchUserResponse {
    int32 code = 1;           // 状态码(0:成功)
    string message = 2;       // 响应消息
    repeated UserInfo users = 3; // 用户列表(手机号已脱敏)
    PaginationResponse pagination = 4; // 分页信息
}

// SendFriendRequestRequest 发送好友申请请求
message SendFriendRequestRequest {
    string applicant_uuid = 1; // 申请人UUID
    string target_uuid = 2;    // 目标用户UUID
    string reason = 3;          // 申请理由
}

// SendFriendRequestResponse 发送好友申请响应
message SendFriendRequestResponse {
    int32 code = 1;             // 状态码(0:成功 12001:已经是好友 12002:好友申请已发送 12004:已经是黑名单)
    string message = 2;         // 响应消息
    string request_id = 3;      // 申请ID
}

// HandleFriendRequestRequest 处理好友申请请求
message HandleFriendRequestRequest {
    int64 request_id = 1;      // 申请ID
    string handler_uuid = 2;    // 处理人UUID
    int32 action = 3;           // 操作(1:同意 2:拒绝)
    string remark = 4;          // 处理备注(可选)
}

// HandleFriendRequestResponse 处理好友申请响应
message HandleFriendRequestResponse {
    int32 code = 1;             // 状态码(0:成功)
    string message = 2;         // 响应消息
}

// GetFriendRequestsRequest 获取好友申请列表请求
message GetFriendRequestsRequest {
    string user_uuid = 1;     // 用户UUID
    Pagination pagination = 2; // 分页参数
}

// FriendRequestInfo 好友申请信息
message FriendRequestInfo {
    int64 id = 1;              // 申请ID
    string applicant_uuid = 2; // 申请人UUID
    string applicant_nickname = 3; // 申请人昵称
    string applicant_avatar = 4; // 申请人头像
    string reason = 5;          // 申请理由
    int32 status = 6;          // 状态(0:待处理 1:已通过 2:已拒绝 3:已过期)
    bool is_read = 7;          // 是否已读
    int64 created_at = 8;     // 申请时间
}

// GetFriendRequestsResponse 获取好友申请列表响应
message GetFriendRequestsResponse {
    int32 code = 1;             // 状态码(0:成功)
    string message = 2;         // 响应消息
    repeated FriendRequestInfo requests = 3; // 好友申请列表
    PaginationResponse pagination = 4; // 分页信息
}

// GetFriendListRequest 获取好友列表请求
message GetFriendListRequest {
    string user_uuid = 1;     // 用户UUID
    Pagination pagination = 2; // 分页参数
}

// FriendInfo 好友信息
message FriendInfo {
    string uuid = 1;          // 好友UUID
    string nickname = 2;      // 昵称
    string avatar = 3;        // 头像
    string remark = 4;        // 备注名
    int32 gender = 5;         // 性别
    string signature = 6;     // 个性签名
    int64 created_at = 7;     // 添加好友时间
    string telephone = 8;     // 手机号(已脱敏)
}

// GetFriendListResponse 获取好友列表响应
message GetFriendListResponse {
    int32 code = 1;            // 状态码(0:成功)
    string message = 2;        // 响应消息
    repeated FriendInfo friends = 3; // 好友列表
    PaginationResponse pagination = 4; // 分页信息
}

// DeleteFriendRequest 删除好友请求
message DeleteFriendRequest {
    string user_uuid = 1;     // 当前用户UUID
    string target_uuid = 2;    // 目标用户UUID
}

// DeleteFriendResponse 删除好友响应
message DeleteFriendResponse {
    int32 code = 1;           // 状态码(0:成功 12003:不存在该好友关系)
    string message = 2;       // 响应消息
}

// SetFriendRemarkRequest 设置好友备注请求
message SetFriendRemarkRequest {
    string user_uuid = 1;     // 当前用户UUID
    string target_uuid = 2;    // 目标用户UUID
    string remark = 3;        // 备注名
}

// SetFriendRemarkResponse 设置好友备注响应
message SetFriendRemarkResponse {
    int32 code = 1;           // 状态码(0:成功 12003:不存在该好友关系)
    string message = 2;       // 响应消息
}

// BlockUserRequest 拉黑用户请求
message BlockUserRequest {
    string user_uuid = 1;     // 当前用户UUID
    string target_uuid = 2;    // 目标用户UUID
}

// BlockUserResponse 拉黑用户响应
message BlockUserResponse {
    int32 code = 1;           // 状态码(0:成功)
    string message = 2;       // 响应消息
}

// UnblockUserRequest 解除拉黑请求
message UnblockUserRequest {
    string user_uuid = 1;     // 当前用户UUID
    string target_uuid = 2;    // 目标用户UUID
}

// UnblockUserResponse 解除拉黑响应
message UnblockUserResponse {
    int32 code = 1;           // 状态码(0:成功)
    string message = 2;       // 响应消息
}

// GetBlacklistRequest 获取黑名单请求
message GetBlacklistRequest {
    string user_uuid = 1;     // 用户UUID
    Pagination pagination = 2; // 分页参数
}

// BlacklistUser 黑名单用户信息
message BlacklistUser {
    string uuid = 1;          // 用户UUID
    string nickname = 2;      // 昵称
    string avatar = 3;        // 头像
    int64 blocked_at = 4;     // 拉黑时间
}

// GetBlacklistResponse 获取黑名单响应
message GetBlacklistResponse {
    int32 code = 1;           // 状态码(0:成功)
    string message = 2;       // 响应消息
    repeated BlacklistUser blacklist = 3; // 黑名单列表
    PaginationResponse pagination = 4; // 分页信息
}

// ==================== 设备会话管理消息 ====================

// CreateDeviceSessionRequest 创建设备会话请求
message CreateDeviceSessionRequest {
    string user_uuid = 1;     // 用户UUID
    DeviceInfo device_info = 2; // 设备信息
    string ip = 3;            // IP地址
    string user_agent = 4;    // User-Agent
}

// CreateDeviceSessionResponse 创建设备会话响应
message CreateDeviceSessionResponse {
    int32 code = 1;           // 状态码(0:成功)
    string message = 2;       // 响应消息
}

// DeviceSessionInfo 设备会话信息
message DeviceSessionInfo {
    string device_id = 1;      // 设备ID
    string device_name = 2;    // 设备名称
    string platform = 3;       // 平台
    string os_version = 4;     // 系统版本
    string app_version = 5;    // 应用版本
    string ip = 6;            // 登录IP
    int32 status = 7;          // 在线状态(0:在线 1:下线)
    int64 last_seen_at = 8;    // 最后活跃时间
    int64 created_at = 9;      // 登录时间
}

// GetDeviceSessionsRequest 获取设备列表请求
message GetDeviceSessionsRequest {
    string user_uuid = 1;     // 用户UUID
}

// GetDeviceSessionsResponse 获取设备列表响应
message GetDeviceSessionsResponse {
    int32 code = 1;           // 状态码(0:成功)
    string message = 2;       // 响应消息
    repeated DeviceSessionInfo devices = 3; // 设备列表
}

// UpdateDeviceOnlineStateRequest 更新设备在线状态请求
message UpdateDeviceOnlineStateRequest {
    string user_uuid = 1;     // 用户UUID
    string device_id = 2;     // 设备ID
    int32 status = 3;         // 在线状态(0:在线 1:下线)
}

// UpdateDeviceOnlineStateResponse 更新设备在线状态响应
message UpdateDeviceOnlineStateResponse {
    int32 code = 1;           // 状态码(0:成功)
    string message = 2;       // 响应消息
}

// KickDeviceRequest 踢出设备请求
message KickDeviceRequest {
    string operator_uuid = 1; // 操作人UUID
    string target_device_id = 2; // 目标设备ID
}

// KickDeviceResponse 踢出设备响应
message KickDeviceResponse {
    int32 code = 1;           // 状态码(0:成功)
    string message = 2;       // 响应消息
}

// ==================== 批量用户查询消息 ====================

// BatchGetUsersRequest 批量获取用户信息请求
message BatchGetUsersRequest {
    repeated string user_uuids = 1; // 用户UUID列表
}

// BatchGetUsersResponse 批量获取用户信息响应
message BatchGetUsersResponse {
    int32 code = 1;                       // 状态码(0:成功)
    string message = 2;                   // 响应消息
    map<string, UserInfo> users = 3;      // 用户信息映射(UUID -> UserInfo)
}

// OnlineState 在线状态
message OnlineState {
    bool is_online = 1;      // 是否在线
    repeated string device_ids = 2; // 在线的设备ID列表
    int64 last_active_at = 3; // 最后活跃时间
}

// GetUsersOnlineStateRequest 获取用户在线状态请求
message GetUsersOnlineStateRequest {
    repeated string user_uuids = 1; // 用户UUID列表
}

// GetUsersOnlineStateResponse 获取用户在线状态响应
message GetUsersOnlineStateResponse {
    int32 code = 1;                      // 状态码(0:成功)
    string message = 2;                  // 响应消息
    map<string, OnlineState> online_states = 3; // 在线状态映射(UUID -> OnlineState)
}
